--- a/templates/datasets.html
+++ b/templates/datasets.html
@@ -58,45 +58,49 @@
             <div id="main__body" class="main__body container-fluid home">
               <div class="row">
                 <div class="col-lg-6">
+
+                  <h1>Explore the platform</h1>
+
                   <h2>Rules</h2>
 
                   <h3>Complete</h3>
-
-                  <h4>Which tax zone a property is in</h4>
+                  <ul>
+                    <li>Which tax zone a property is in</li>
+                  </ul>
 
                   <h3>In progress</h3>
-
-                  <h4>Calculating tax</h4>
-
-                  <h4>Which schedule and band is a property in</h4>
+                  <ul>
+                    <li>Calculating tax</li>                    
+                    <li>Which schedule and band is a property in</li>
+                  </ul>
 
                   <h3>Backlog</h3>
-
-                  <h4>Is a property in Wales or not?</h4>
-
+                  <ul>
+                    <li>Is a property in Wales or not?</li>
+                  </ul>
 
                   <h2>Data</h2>
 
-                  <h3>Complete</h3>
-
                   <h3>In progress</h3>
+                  <ul>
+                    <li>Tax zones</li>
+                    <li>Property information</li>
+                  </ul>
 
-                  <h4>Tax zones (open)</h4>
+                  
 
-                  Who can access this?
-
-                  <h4>Property information</h4>
-
-                  <h4>Price sold data</h4>
+                  
 
                   <h3>Backlog</h3>
+                  <ul>
+                    <li>Price sold data</li>
+                    <li>Energy perfomance data</li>
+                    <li>Tourism register</li>
+                    <li>Second homes</li>
+                  </ul>
 
-                  <h4>Energy perfomance data</h4>
-                  <h4>Tourism register</h4>
-                  <h4>Second homes</h4>
 
-
-                  https://theodi.org/about-the-odi/the-data-spectrum/
+                  <!-- https://theodi.org/about-the-odi/the-data-spectrum/ -->
                 </div>
               </div>
             </div>
