--- a/templates/index.html
+++ b/templates/index.html
@@ -75,11 +75,11 @@
               <!--Documentation-->
               <div class="row">
                 <div class="col-lg-6">
-                  <h2>Understand the data</h2>
+                  <h2>Understand the platform</h2>
                   <p >Read about how the data is created and who can access each dataset.</p>
                   <p><img src="http://www.digital-land.info/static/images/datasets.png" srcset="/static/images/datasets.svg" alt="An illustration depicting a dataset page with a title of 'What is this data about'" class="app-max-width--100"></p>
                   <p>
-                    <a href="/dataset/">Find land and property datasets</a>
+                    <a href="/about-the-platform/">Explore the data and rules</a>
                   </p>
                 </div>
                 <div class="col-lg-6">
