--- a/templates/datasets.html
+++ b/templates/datasets.html
@@ -60,7 +60,27 @@
                 <div class="col-lg-6">
 
                   <h1>Explore the platform</h1>
+                  <p>
+                    This is a proof of concept platform and does not contain real data.
+                    We are exploring how to make data and rules available via APIs.
+                  </p>
 
+                  <h2>Data</h2>
+
+                  <h3>In progress</h3>
+                  <ul>
+                    <li>Tax zones</li>
+                    <li>Property information</li>
+                  </ul>
+
+                  <h3>Backlog</h3>
+                  <ul>
+                    <li>Price sold data</li>
+                    <li>Energy perfomance data</li>
+                    <li>Tourism register</li>
+                    <li>Second homes</li>
+                  </ul>
+                  <hr>
                   <h2>Rules</h2>
 
                   <h3>Complete</h3>
@@ -79,28 +99,6 @@
                     <li>Is a property in Wales or not?</li>
                   </ul>
 
-                  <h2>Data</h2>
-
-                  <h3>In progress</h3>
-                  <ul>
-                    <li>Tax zones</li>
-                    <li>Property information</li>
-                  </ul>
-
-                  
-
-                  
-
-                  <h3>Backlog</h3>
-                  <ul>
-                    <li>Price sold data</li>
-                    <li>Energy perfomance data</li>
-                    <li>Tourism register</li>
-                    <li>Second homes</li>
-                  </ul>
-
-
-                  <!-- https://theodi.org/about-the-odi/the-data-spectrum/ -->
                 </div>
               </div>
             </div>
