--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                   <div class="row">
                     <div class="col-lg-8">
                       <h1>Find property and land information for Wales that is easy to understand, use and trust</h1>
-                      <p class="lead">A platform to help you create public services and inform policy decisions.</p>
+                      <p class="lead">A platform to help you create public services and inform policy decisions..</p>
                     </div>
                     <div class="col-lg-4">
                       <img src="/static/images/proposition-image.png" srcset="/static/images/proposition-image.svg" alt="A graphic represent the data platform, showing a map and different types of data file such as CSV and JSON" class="app-hero__image">
@@ -98,7 +98,7 @@
               <div class="footer__components container-fluid">
                 <nav  id="block-footer">
 
-                  
+
                     <ul class="menu clearfix">
                       <li class="menu__item">
                 <a href="https://gov.wales/welsh-revenue-authority/contact-us" data-drupal-link-system-path="node/19808">Contact us</a>
@@ -107,8 +107,8 @@
                 <a href="https://gov.wales/welsh-revenue-authority/privacy-policy" data-drupal-link-system-path="node/16">Privacy</a>
                       </li>
                     </ul>
-                  
-                  
+
+
                 </nav>
               </div>
               <div class="gel_footer">
@@ -128,4 +128,3 @@
   </div>
   </body>
 </html>
-
