--- a/templates/dataset1.html
+++ b/templates/dataset1.html
@@ -17,7 +17,7 @@
         <link rel="alternate" hreflang="cy" href="" />
         <link rel="icon" type="image/ico"  href="/favicon.ico" >
         <meta name="msapplication-TileColor" content="#b60404">
-        <title>Land and property platform</title>
+        <title>Land and Property Data</title>
         <link rel="stylesheet" media="all" href="/static/css/walesgel/css_OYIo3xiAHpmmPcGgOG0H--_75kKVyI61kZxf6cDlX0c.css" />
         <link rel="stylesheet" media="all" href="/static/css/walesgel/css_v9XhIgEML2C8QC1djzKa7NjYpljgky-pl_Ak-t5JuwU.css" />
         <link rel="stylesheet" media="all" href="/static/css/app.css" />
@@ -35,11 +35,10 @@
                 <div class="col-md-8 col-sm-8">
                   <a href="/">
                       <h1 id="secondary-h1-header" class="secondary-h1-header">
-                          Land and property platform
+                          Land and property tax platform
                       </h1>
                   </a>
-                  </div>
-                  <div class="col-sm-4"></div>
+              </div>
                 <div id="masthead_options">
                     <div class="col-md-4 col-sm-4">
                         <div class="lle-header-language">
@@ -47,84 +46,49 @@
                                 <a href="#" class="language-link btn btn--language " hreflang="altpage.lang" data-drupal-link-system-path="&lt;front&gt;">
                                   Cymraeg
                                 </a>
-
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-8 col-sm-8">
-                  <br>
-                  <a href="pricing.html" style="color:white; padding: 0em 1em 0em 0em">Pricing</a>
-                  <a href="features.html" style="color:white; padding: 0em 1em 0em 0em">Features</a>
-                  <a href="roadmap.html" style="color:white; padding: 0em 1em 0em 0em">Roadmap</a>
-                  </div>
-                </div>
         </div>
     </div>
       <div class="dialog-off-canvas-main-canvas" data-off-canvas-main-canvas>
         <div id="page_wrapper"  class="layout-container">
           <main id="wg_main" class="wg_main">
+            <div id="main__body" class="main__body container-fluid home">
+              <div class="row">
+                <div class="col-lg-8">
 
-            <!--Hero--->
-              <section class="app-hero" id="intro">
-                <div class="app-hero__content container-fluid">
-                  <div class="row">
-                    <div class="col-lg-8">
-                      <h1>Find property and land information for Wales that is easy to understand, use and trust</h1>
-                      <p class="lead">A platform to help teams design public services and analysts to inform policy decisions</p>
-                    </div>
-                    <div class="col-lg-4">
-                      <img src="/static/images/proposition-image.png" srcset="/static/images/proposition-image2.svg" alt="A graphic represent the data platform, showing a map and different types of data file such as CSV and JSON" class="app-hero__image">
-                    </div>
-                  </div>
-                </div>
-              </section>
+                  <h1>Dataset</h1>
 
-              <div id="main__body" class="main__body container-fluid home">
-                <!--Documentation-->
-                <div class="row">
 
-                    <div class="col-lg-6">
-                    <h2>Learn more about the data</h2>
-                    <p >Explore the available data, how it is created and learn about who can access each dataset.</p>
-                    <p>
-                      <a href="datasets.html">Explore the data and rules</a>
-                    </p>
-                    <br>
-                    <br>
-                  </div>
-                  <div class="col-lg-6">
-                  <p><img src="http://www.digital-land.info/static/images/datasets.png" srcset="/static/images/datasets.svg" alt="An illustration depicting a dataset page with a title of 'What is this data about'" class="app-max-width--100"></p>
-                    <br>
-                    <br>
-                </div>
-                  <div class="col-lg-6">
-                    <h2>Get started with the API</h2>
-                    <p>Integrate the land and property API with your web application or back office system.</p>
-                    <p>
-                      <a href="/docs">View the API documentation</a>
-                    </p>
-                  </div>
-                  <div class="col-lg-6">
-                    <img srcset="/static/images/api.svg" alt="An illustration depicting an API, showing a terminal command prompt" class="app-max-width--100">
-                  </div>
-                  <div class="col-lg-6">
-                    <br>
-                    <br>
-                    <br>
-                    <h2>Analysts and researchers</h2>
-                    <p>Discover how the platform can support your analysis and research into property and land within Wales.</p>
-                    <p>
-                      <a href="analysts.html">Discover more about the platform</a>
-                    </p>
-                  </div>
-                  <div class="col-lg-6">
-                    <p><img srcset="/static/images/analytics-image2.svg" alt="An illustration depicting an API, showing a terminal command prompt" class="app-max-width--100"></p>
-                  </div>
+                  <h2>Property information</h2>
+
+                  <table>
+                    <tr>
+                      <th>Count</th>
+                      <td>120</td>
+                    </tr>
+                    <tr>
+                      <th>Publisher:</th>
+                      <td>Welsh Revenue Authority</td>
+                    </tr>
+                    <tr>
+                      <th>Last updated:</th>
+                      <td>25/03/2022</td>
+                    </tr>
+                  </table>
+
+                  <h3>View the data</h3>
+                  <p>You can view this data <a href="#">as a list</a> and <a href="#">on a map</a>
+
+                  <h3>Download the data</h3>
+                  <p>You can download a copy of this dataset as a <a href="#">csv file</a> or <a href="#">excel</a> or <a href="#">JSON</a> 
+
                 </div>
               </div>
-            </main>
+            </div>
+          </main>
           <footer class="footer" id="footer">
             <div class="gel_footer_menu">
               <div class="footer__components container-fluid">
