--- a/templates/features.html
+++ b/templates/features.html
@@ -17,7 +17,7 @@
         <link rel="alternate" hreflang="cy" href="" />
         <link rel="icon" type="image/ico"  href="/favicon.ico" >
         <meta name="msapplication-TileColor" content="#b60404">
-        <title>Land and property platform</title>
+        <title>Land and Property Data</title>
         <link rel="stylesheet" media="all" href="/static/css/walesgel/css_OYIo3xiAHpmmPcGgOG0H--_75kKVyI61kZxf6cDlX0c.css" />
         <link rel="stylesheet" media="all" href="/static/css/walesgel/css_v9XhIgEML2C8QC1djzKa7NjYpljgky-pl_Ak-t5JuwU.css" />
         <link rel="stylesheet" media="all" href="/static/css/app.css" />
@@ -38,8 +38,7 @@
                           Land and property platform
                       </h1>
                   </a>
-                  </div>
-                  <div class="col-sm-4"></div>
+              </div>
                 <div id="masthead_options">
                     <div class="col-md-4 col-sm-4">
                         <div class="lle-header-language">
@@ -47,84 +46,58 @@
                                 <a href="#" class="language-link btn btn--language " hreflang="altpage.lang" data-drupal-link-system-path="&lt;front&gt;">
                                   Cymraeg
                                 </a>
-
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-8 col-sm-8">
-                  <br>
-                  <a href="pricing.html" style="color:white; padding: 0em 1em 0em 0em">Pricing</a>
-                  <a href="features.html" style="color:white; padding: 0em 1em 0em 0em">Features</a>
-                  <a href="roadmap.html" style="color:white; padding: 0em 1em 0em 0em">Roadmap</a>
-                  </div>
-                </div>
         </div>
     </div>
       <div class="dialog-off-canvas-main-canvas" data-off-canvas-main-canvas>
         <div id="page_wrapper"  class="layout-container">
           <main id="wg_main" class="wg_main">
+            <div id="main__body" class="main__body container-fluid home">
+              <div class="row">
+                <div class="col-lg-13">
 
-            <!--Hero--->
-              <section class="app-hero" id="intro">
-                <div class="app-hero__content container-fluid">
-                  <div class="row">
-                    <div class="col-lg-8">
-                      <h1>Find property and land information for Wales that is easy to understand, use and trust</h1>
-                      <p class="lead">A platform to help teams design public services and analysts to inform policy decisions</p>
-                    </div>
-                    <div class="col-lg-4">
-                      <img src="/static/images/proposition-image.png" srcset="/static/images/proposition-image2.svg" alt="A graphic represent the data platform, showing a map and different types of data file such as CSV and JSON" class="app-hero__image">
-                    </div>
-                  </div>
-                </div>
-              </section>
+                  <h1>Features</h1>
+                  <p>
+                    If you are designing and building public services you can use the land and property platform to intergate property and land information
+                    within your product or service.
+                  </P>
+                  <p>You can also use the platform for analysis and research purposes with many data sets being freely available
+                    to download.
+                  </p>
+                  <p>The land and property platform makes it easy to;
+                    <ul>
+                      <li>Integrate land and property information in your product or service</li>
+                      <li>Download data sets for offline analysis and research</li>
+                      <li>Request analytical help from the Welsh Revenue Authority</li>
+                    </ul>
 
-              <div id="main__body" class="main__body container-fluid home">
-                <!--Documentation-->
-                <div class="row">
-
-                    <div class="col-lg-6">
-                    <h2>Learn more about the data</h2>
-                    <p >Explore the available data, how it is created and learn about who can access each dataset.</p>
-                    <p>
-                      <a href="datasets.html">Explore the data and rules</a>
-                    </p>
-                    <br>
-                    <br>
-                  </div>
-                  <div class="col-lg-6">
-                  <p><img src="http://www.digital-land.info/static/images/datasets.png" srcset="/static/images/datasets.svg" alt="An illustration depicting a dataset page with a title of 'What is this data about'" class="app-max-width--100"></p>
-                    <br>
-                    <br>
-                </div>
-                  <div class="col-lg-6">
-                    <h2>Get started with the API</h2>
-                    <p>Integrate the land and property API with your web application or back office system.</p>
-                    <p>
-                      <a href="/docs">View the API documentation</a>
-                    </p>
-                  </div>
-                  <div class="col-lg-6">
-                    <img srcset="/static/images/api.svg" alt="An illustration depicting an API, showing a terminal command prompt" class="app-max-width--100">
-                  </div>
-                  <div class="col-lg-6">
-                    <br>
-                    <br>
-                    <br>
-                    <h2>Analysts and researchers</h2>
-                    <p>Discover how the platform can support your analysis and research into property and land within Wales.</p>
-                    <p>
-                      <a href="analysts.html">Discover more about the platform</a>
-                    </p>
-                  </div>
-                  <div class="col-lg-6">
-                    <p><img srcset="/static/images/analytics-image2.svg" alt="An illustration depicting an API, showing a terminal command prompt" class="app-max-width--100"></p>
-                  </div>
+                  <h2>API intergration</h2>
+                  <p>You can integrate the Land and property API with your web application or back-office system to use land and property information in your service.</p>
+                  <p>
+                    <a href="#">Get started with the API.</a>
+                  </p>
+                  <h2>Analysis and research</h2>
+                  <p>You can use the platform to download data sets for further analysis and research helping you reach trusted conclusions.</p>
+                  <p>
+                    <a href="datasets.html">Learn more about the available data.</a>
+                  </p>
+                  <h2>Performance</h2>
+                  <p>The land and property platform commits to 99% availability through both our API and web applications.</p>
+                  <p>
+                    Vist our <a href="#">performance data</a> page to see how the platform is performing.
+                  </p>
+                  <h2>Security</h2>
+                  <p>The land and property platform protects and manages data to meet the needs of Government services and Data Protection Act 2018.</p>
+                  <p>
+                    Vist our <a href="#">security</a> page to learn more about how we keep data secure.
+                  </p>
                 </div>
               </div>
-            </main>
+            </div>
+          </main>
           <footer class="footer" id="footer">
             <div class="gel_footer_menu">
               <div class="footer__components container-fluid">
