--- a/templates/index.html
+++ b/templates/index.html
@@ -55,9 +55,9 @@
             <div class="row">
                 <div class="col-md-8 col-sm-8">
                   <br>
-                  <a href="/pricing.html" style="color:white; padding: 0em 1em 0em 0em">Pricing</a>
-                  <a href="/features.html" style="color:white; padding: 0em 1em 0em 0em">Features</a>
-                  <a href="/roadmap.html" style="color:white; padding: 0em 1em 0em 0em">Roadmap</a>
+                  <a href="/templates/pricing.html" style="color:white; padding: 0em 1em 0em 0em">Pricing</a>
+                  <a href="/templates/features.html" style="color:white; padding: 0em 1em 0em 0em">Features</a>
+                  <a href="/templates/roadmap.html" style="color:white; padding: 0em 1em 0em 0em">Roadmap</a>
                   </div>
                 </div>
         </div>
