--- a/templates/analysts.html
+++ b/templates/analysts.html
@@ -61,14 +61,15 @@
 
                   <h1>Analysts and researchers</h1>
                   <p>
-                    The land and property platform can help and support you with your analysis and research so that you reach effective conclusions.
+                    The land and property platform can help and support you with your 
+                    analysis and research so that you reach effective conclusions.
                   </p>
                   <p>
-                    There are two key ways to use the platform for analysis or research;
+                    There are two key ways to use the platform for analysis or research:
                   </p>
                   <ul>
-                    <li>Access and download the data through our secure API</li>
-                    <li>Request direct analytical support from the Welsh Revenue Authority data team</li>
+                    <li>Access and download data through the secure API</li>
+                    <li>Request direct analytical support</li>
                   </ul>
                 </div>
               </div>
