--- a/templates/datasets.html
+++ b/templates/datasets.html
@@ -67,38 +67,13 @@
 
                   <h2>Data</h2>
 
-                  <h3>In progress</h3>
                   <ul>
                     <li>Tax zones</li>
                     <li>Property information</li>
                   </ul>
-
-                  <h3>Backlog</h3>
-                  <ul>
-                    <li>Price sold data</li>
-                    <li>Energy perfomance data</li>
-                    <li>Tourism register</li>
-                    <li>Second homes</li>
-                  </ul>
-                  <hr>
-                  <h2>Rules</h2>
-
-                  <h3>Complete</h3>
-                  <ul>
-                    <li>Which tax zone a property is in</li>
-                  </ul>
-
-                  <h3>In progress</h3>
-                  <ul>
-                    <li>Calculating tax</li>                    
-                    <li>Which schedule and band is a property in</li>
-                  </ul>
-
-                  <h3>Backlog</h3>
-                  <ul>
-                    <li>Is a property in Wales or not?</li>
-                  </ul>
-
+                  <p>
+                    See our <a href="/roadmap"></a>roadmap</a> for datasets that we are working to add.
+                  </p>
                 </div>
               </div>
             </div>
@@ -107,8 +82,6 @@
             <div class="gel_footer_menu">
               <div class="footer__components container-fluid">
                 <nav  id="block-footer">
-
-                  
                     <ul class="menu clearfix">
                       <li class="menu__item">
                 <a href="https://gov.wales/welsh-revenue-authority/contact-us" data-drupal-link-system-path="node/19808">Contact us</a>
