--- a/templates/features.html
+++ b/templates/features.html
@@ -61,28 +61,30 @@
 
                   <h1>Features</h1>
                   <p>
-                    If you are designing and building public services you can use the land and property platform to intergate property and land information
+                    If you are designing and building public services you can use the 
+                    land and property platform to use property and land information
                     within your product or service.
                   </P>
                   <p>You can also use the platform for analysis and research purposes with many data sets being freely available
                     to download.
                   </p>
-                  <p>The land and property platform makes it easy to;
+                  <p>The land and property platform makes it easy to:
                     <ul>
-                      <li>Integrate land and property information in your product or service</li>
-                      <li>Download data sets for offline analysis and research</li>
-                      <li>Request analytical help from the Welsh Revenue Authority</li>
+                      <li>Use land and property information in your product or service</li>
+                      <li>Download datasets for offline analysis and research</li>
                     </ul>
 
-                  <h2>API intergration</h2>
-                  <p>You can integrate the Land and property API with your web application or back-office system to use land and property information in your service.</p>
+                  <h2>API integration</h2>
+                  <p>You can integrate the Land and property API with your web application 
+                    or back-office system to use land and property information in your service.
+                  </p>
                   <p>
                     <a href="#">Get started with the API.</a>
                   </p>
                   <h2>Analysis and research</h2>
                   <p>You can use the platform to download data sets for further analysis and research helping you reach trusted conclusions.</p>
                   <p>
-                    <a href="datasets.html">Learn more about the available data.</a>
+                    <a href="/datasets">Learn more about the available data.</a>
                   </p>
                   <h2>Performance</h2>
                   <p>The land and property platform commits to 99% availability through both our API and web applications.</p>
