--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -66,16 +66,18 @@
                   <p>
                     The land and property platform is <strong>free</strong> to use unless you;
                     <ul>
-                      <li>Need access to certain data sets</li>
-                      <li>Need the help of a Welsh Revenue Authority Analyst for research</li>
+                      <li>Access to certain datasets</li>
+                      <li>Make a very high number of requests</li>
                     </ul>
 
                   <h2>Datasets</h2>
                   <p>
-                    Most of the data available through the land and property platform is free to use either through our API or in form of downloads.
-                    <p>
-                      <a href="datasets.html">Learn more about the available data and download sample data sets.</a>
-                    </p>
+                    Most of the data available through the land and property platform is free to use 
+                    either through our API or in form of downloads.
+                  </p>
+                  <p>
+                    <a href="/datasets">Learn more about the available data and download sample datasets.</a>
+                  </p>
 
 
                 </div>
@@ -87,7 +89,7 @@
               <div class="footer__components container-fluid">
                 <nav  id="block-footer">
 
-
+                  
                     <ul class="menu clearfix">
                       <li class="menu__item">
                 <a href="https://gov.wales/welsh-revenue-authority/contact-us" data-drupal-link-system-path="node/19808">Contact us</a>
