--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -35,7 +35,7 @@
                 <div class="col-md-8 col-sm-8">
                   <a href="/">
                       <h1 id="secondary-h1-header" class="secondary-h1-header">
-                          Land and property platform
+                          Land and property tax platform
                       </h1>
                   </a>
               </div>
@@ -57,35 +57,48 @@
           <main id="wg_main" class="wg_main">
             <div id="main__body" class="main__body container-fluid home">
               <div class="row">
-                <div class="col-lg-11">
+                <div class="col-lg-8">
 
-                  <h1>Roadmap</h1>
+                  <h1>Explore the platform</h1>
                   <p>
-                    <strong>Last updated 25/03/2022</strong>
+                    This is a proof of concept platform and does not contain real data.
+                    We are exploring how to make data and rules available via APIs.
                   </p>
-                  <p>
-                  The land and property platform roadmap shows what we are working on and some of the things that we have done.
-                  </p>
-                  <p>The roadmap is a guide and does not cover everything that the we do and things may change.</p>
-                  <p>You can <a href="#">contact us</a> if you have any questions, feedback or suggestion for new features.</p>
 
-                  <h2>What are we working on</h2>
+                  <h2>Data</h2>
 
-                  <h3>Now</h3>
+                  <h3>In progress</h3>
                   <ul>
-                    <li>Prototype platform</li>
-                    <li>Defining data sets</li>
-                    <li>Test API</li>
+                    <li>Tax zones</li>
+                    <li>Property information</li>
                   </ul>
-                  <h3>Next</h3>
+
+                  <h3>Backlog</h3>
                   <ul>
-                    <li>Discovery</li>
-                    <li>Alpha</li>
+                    <li>Price sold data</li>
+                    <li>Energy perfomance data</li>
+                    <li>Tourism register</li>
+                    <li>Second homes</li>
                   </ul>
-                  <h3>Later</h3>
+                  <hr>
+                  <h2>Rules</h2>
+
+                  <h3>Complete</h3>
                   <ul>
-                    <li>Public beta</li>
+                    <li>Which tax zone a property is in</li>
                   </ul>
+
+                  <h3>In progress</h3>
+                  <ul>
+                    <li>Calculating tax</li>                    
+                    <li>Which schedule and band is a property in</li>
+                  </ul>
+
+                  <h3>Backlog</h3>
+                  <ul>
+                    <li>Is a property in Wales or not?</li>
+                  </ul>
+
                 </div>
               </div>
             </div>
@@ -95,7 +108,7 @@
               <div class="footer__components container-fluid">
                 <nav  id="block-footer">
 
-
+                  
                     <ul class="menu clearfix">
                       <li class="menu__item">
                 <a href="https://gov.wales/welsh-revenue-authority/contact-us" data-drupal-link-system-path="node/19808">Contact us</a>
@@ -104,8 +117,8 @@
                 <a href="https://gov.wales/welsh-revenue-authority/privacy-policy" data-drupal-link-system-path="node/16">Privacy</a>
                       </li>
                     </ul>
-
-
+                  
+                  
                 </nav>
               </div>
               <div class="gel_footer">
