--- a/templates/_header.html
+++ b/templates/_header.html
@@ -49,6 +49,14 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+              <div class="col-md-8 col-sm-8">
+                <br>
+                <a href="/templates/pricing.html" style="color:white; padding: 0em 1em 0em 0em">Pricing</a>
+                <a href="/templates/features.html" style="color:white; padding: 0em 1em 0em 0em">Features</a>
+                <a href="/templates/roadmap.html" style="color:white; padding: 0em 1em 0em 0em">Roadmap</a>
+              </div>
+            </div>
         </div>
     </div>
       <div class="dialog-off-canvas-main-canvas" data-off-canvas-main-canvas>
