--- a/templates/_header.html
+++ b/templates/_header.html
@@ -50,11 +50,11 @@
                 </div>
             </div>
             <div class="row">
-              <div class="col-md-8 col-sm-8">
+              <div class="platform-menu col-md-8 col-sm-8">
                 <br>
-                <a href="/pricing" style="color:white; padding: 0em 1em 0em 0em">Pricing</a>
-                <a href="/features" style="color:white; padding: 0em 1em 0em 0em">Features</a>
-                <a href="/roadmap" style="color:white; padding: 0em 1em 0em 0em">Roadmap</a>
+                <a href="/pricing">Pricing</a>
+                <a href="/features">Features</a>
+                <a href="/roadmap">Roadmap</a>
               </div>
             </div>
         </div>
