replace links to .html with links to routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
           <h2>Learn more about the data</h2>
           <p >Explore the available data, how it is created and learn about who can access each dataset.</p>
           <p>
-            <a href="datasets.html">Explore the data and rules</a>
+            <a href="/datasets">Explore the data and rules</a>
           </p>
           <br>
           <br>
@@ -50,7 +50,7 @@
           <h2>Analysts and researchers</h2>
           <p>Discover how the platform can support your analysis and research into property and land within Wales.</p>
           <p>
-            <a href="analysts.html">Discover more about the platform</a>
+            <a href="/analysts">Discover more about the platform</a>
           </p>
         </div>
         <div class="col-lg-6">
