style menu items

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="row">
-              <div class="platform-menu col-md-8 col-sm-8">
+              <div id="platform-menu" class="col-md-8 col-sm-8">
                 <br>
                 <a href="/pricing">Pricing</a>
                 <a href="/features">Features</a>
