--- a/templates/_header.html
+++ b/templates/_header.html
@@ -52,8 +52,8 @@
             <div class="row">
               <div id="platform-menu" class="col-md-8 col-sm-8">
                 <br>
-                <a href="/pricing">Pricing</a>
                 <a href="/features">Features</a>
+                <a href="/getting-started">Getting started</a>
                 <a href="/roadmap">Roadmap</a>
               </div>
             </div>
