--- a/templates/getting-started.html
+++ b/templates/getting-started.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-11">
 
-        <h1>Pricing</h1>
+        <h1>Getting started</h1>
         <p>
           This is a proof of concept platform and does not contain real data.
         </p>
