--- a/templates/_header.html
+++ b/templates/_header.html
@@ -28,6 +28,35 @@
             Skip to main content
           </a>
         </div>
+
+      <div class="gel-beta accessible accessible--red">
+        <div class="container-fluid">
+            <div class="row">
+
+                <div class="col-md-7">
+                    <div class="gel-beta__message-wrapper">
+                        <div class="gel-beta__message">
+                            <a id="alpha-btn" class="btn btn--beta btn--light">Proof of concept</a>
+                                <span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="gel-beta__actions-wrapper">
+                        <div class="gel-beta__actions">
+
+                            <a class="btn btn--black" href="#">Feedback</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="gel-beta__minimise hidden-lg">
+                    <button class="gel-beta__minimise-button  js-gel-beta-minimise"><span class="visually-hidden">Minimise</span></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="gel_masthead">
         <div class="container-fluid">
             <div class="row">
