copy for getting started

--- a/templates/getting-started.html
+++ b/templates/getting-started.html
@@ -5,25 +5,27 @@
 
         <h1>Getting started</h1>
         <p>
-          This is a proof of concept platform and does not contain real data.
+          The land and property data platform is for service delivery teams and 
+          data analysts working in the Welsh public sector. Some information is also available
+          as open data and can be used by anyone.
         </p>
         <p>
-          The land and property platform is <strong>free</strong> to use unless you;
-          <ul>
-            <li>Access to certain datasets</li>
-            <li>Make a very high number of requests</li>
-          </ul>
-
-        <h2>Datasets</h2>
-        <p>
-          Most of the data available through the land and property platform is free to use 
-          either through our API or in form of downloads.
+          You don't need to create an account to get started with our API. 
         </p>
+        <p><a href="/api-docs">Start exploring the API now</a></p>
         <p>
-          <a href="/datasets">Learn more about the available data and download sample datasets.</a>
+          You will be asked to create an account to access some datasets where licensing restrictions apply.
+          For some closed datasets, there will be additional verification steps for your account.
+          Without an account, the API will return fake example data.
         </p>
-
-
+        <h2>Pricing</h2>
+        <p>
+          The land and property platform is <strong>free</strong> to use unless you:
+        </p>
+        <ul>
+          <li>need access to certain datasets</li>
+          <li>make a very high number of requests</li>
+        </ul>
       </div>
     </div>
   </div>
