--- a/templates/getting-started.html
+++ b/templates/getting-started.html
@@ -16,7 +16,7 @@
         <p>
           You will be asked to create an account to access some datasets where licensing restrictions apply.
           For some closed datasets, there will be additional verification steps for your account.
-          Without an account, the API will return fake example data.
+          Without an account, the API will return fake sample data.
         </p>
         <h2>Pricing</h2>
         <p>
@@ -25,6 +25,10 @@
         <ul>
           <li>need access to certain datasets</li>
           <li>make a very high number of requests</li>
+        </ul>
+        <h2>Who's using the platform?</h2>
+        <ul>
+          <li>The Welsh Revenue Authority</li>
         </ul>
       </div>
     </div>
