--- a/templates/features.html
+++ b/templates/features.html
@@ -34,7 +34,7 @@
         <h2>Security</h2>
         <p>The land and property platform protects and manages data to meet the needs of Government services and Data Protection Act 2018.</p>
         <h2>Support</h2>
-        <p>Join our <a href="#">>Slack channel</a></p>
+        <p>Join our <a href="#">Slack channel</a></p>
       </div>
     </div>
   </div>
