--- a/templates/features.html
+++ b/templates/features.html
@@ -8,6 +8,7 @@
         <ul>
           <li><a href="#">Introduction</a></li>
           <li><a href="#">API integration</a></li>
+          <li><a href="#">Performance</a></li>
           <li><a href="#">Security</a></li>
           <li><a href="#">Support</a></li>
         </ul>
@@ -28,11 +29,12 @@
         <p>
           <a href="/api-docs">Get started with the API.</a>
         </p>
+        <h2>Performance</h2>
         <p>
           Vist our <a href="#">performance data</a> page to see how the platform is performing.
         </p>
         <h2>Security</h2>
-        <p>The land and property platform protects and manages data to meet the needs of Government services and Data Protection Act 2018.</p>
+        <p>The land and property platform protects and manages data to meet the needs of government services and Data Protection Act 2018.</p>
         <h2>Support</h2>
         <p>Join our <a href="#">Slack channel</a></p>
       </div>
