--- a/templates/features.html
+++ b/templates/features.html
@@ -16,8 +16,8 @@
         <h2>Introduction</h2>
         <p>
           The land and property data platform makes it easier for service delivery teams in Wales to 
-          work with data about land and property.If you are designing and building public services you can use the 
-          platform to quickly access data.
+          work with data about land and property. If you are designing and building public services you can use the 
+          platform to quickly access data, such as checking if an address is in Wales or not.
         </p>
         <p>It can also be used by analysts developing policies or researching outcomes.
         </p>
