copy for PI page

--- a/templates/apidocs.html
+++ b/templates/apidocs.html
@@ -3,15 +3,16 @@
     <div class="row">
       <div class="col-lg-11">
 
-        <h1>REST API Documents</h1>
+        <h1>API documentation</h1>
+
+
+        <h2>Try the live API explorer</h2>
         <p>
-          This documentation is for developers interested in using the Land and property API.</p>
-          <p>
-            You can use it to integrate directly with the API or learn more about our libraries.
+          You can use the <a href="/docs">API explorer</a> to try out the API.
         </p>
 
-        <h2>Base URL</h2>
-        <strong><p style="background: #f9f9f8">https://api.land-property-platform.herokuapp.com/</p></strong>
+        <h2>Code libraries</h2>
+        <p>We maintain code libraries in <a href="#">Python</a>, <a href="#">C#</a> and <a href="#">Java</a></p>
 
       </div>
     </div>
