link to documentation from mkdocs

--- a/templates/apidocs.html
+++ b/templates/apidocs.html
@@ -3,12 +3,11 @@
     <div class="row">
       <div class="col-lg-11">
 
-        <h1>API documentation</h1>
-
+        <h1>Getting started with the API</h1>
 
         <h2>Try the live API explorer</h2>
         <p>
-          You can use the <a href="/docs">API explorer</a> to try out the API.
+          You can use the <a href="/docs">API explorer</a> to try out the API or [read the full API documentation.](https://welsh-revenue-authority.github.io/property_platform_app/).
         </p>
 
         <h2>Code libraries</h2>
