--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
           <h2>Get started with the API</h2>
           <p>Integrate the land and property API with your web application or back office system.</p>
           <p>
-            <a href="/api-docs">View the API documentation</a>
+            <a href="/api-docs">View the API documentation, explorer and code libraries</a>
           </p>
         </div>
         <div class="col-lg-6">
