link not markdown

--- a/templates/apidocs.html
+++ b/templates/apidocs.html
@@ -7,7 +7,7 @@
 
         <h2>Try the live API explorer</h2>
         <p>
-          You can use the <a href="/docs">API explorer</a> to try out the API or [read the full API documentation.](https://welsh-revenue-authority.github.io/property_platform_app/).
+          You can use the <a href="/docs">API explorer</a> to try out the API or <a href="https://welsh-revenue-authority.github.io/property_platform_app/">read the full API documentation.</a>.
         </p>
 
         <h2>Code libraries</h2>
