--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,5 +1,26 @@
 </main>
 <footer class="footer" id="footer">
+  <div class="gel-beta accessible accessible--red">
+    <div class="container-fluid">
+        <div class="row">
+  
+            <div class="col-md-12">
+                <div class="gel-beta__message-wrapper">
+                    <div class="gel-beta__message">
+                        <p>
+                          <span class="btn btn--beta btn--light">Proof of concept</span>
+                        </p>
+                        <p>
+                          <strong>This is a proof of concept</strong> created by the Welsh Revenue Authority. It contains synthetic data and 
+                          does not cover the whole of Wales. <a href="/poc-data">Find out more about what data is included in the proof of concept.</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+  
+        </div>
+    </div>
+  </div>
   <div class="gel_footer_menu">
     <div class="footer__components container-fluid">
       <nav  id="block-footer">
@@ -7,10 +28,16 @@
 
           <ul class="menu clearfix">
             <li class="menu__item">
-      <a href="https://gov.wales/welsh-revenue-authority/contact-us" data-drupal-link-system-path="node/19808">Contact us</a>
+      <a href="mailto:dataproject@wra.gov.wales" data-drupal-link-system-path="node/19808">Feedback</a>
             </li>
         <li class="menu__item">
       <a href="https://gov.wales/welsh-revenue-authority/privacy-policy" data-drupal-link-system-path="node/16">Privacy</a>
+            </li>
+            <li>
+              <a href="https://welsh-revenue-authority.github.io/weeknotes/property-data-poc/">Proof of concept weeknotes</a>
+            </li>
+            <li>
+              <a href="https://welsh-revenue-authority.github.io/property-data-poc/en/">Team website</a>
             </li>
           </ul>
 
