--- a/templates/_header.html
+++ b/templates/_header.html
@@ -46,7 +46,7 @@
                     <div class="gel-beta__actions-wrapper">
                         <div class="gel-beta__actions">
 
-                            <a class="btn btn--black" href="#">Feedback</a>
+                            <a class="btn btn--black" href="mailto:dataproject@wra.gov.wales">Feedback</a>
                         </div>
                     </div>
                 </div>
