--- a/static/css/app.css
+++ b/static/css/app.css
@@ -39,3 +39,18 @@ img {
   background-color:#ffd530;
   color:black;
 }
+
+.lead {
+  color:#1f1f1f;
+}
+
+.product-features dt, .product-features dd {
+  font-size:18px;
+  padding-left:70px;
+}
+
+.product-features dd {
+  margin-bottom:10px;
+  background-image:url(../images/tick.svg);
+  background-repeat: no-repeat;
+}
