--- a/templates/features.html
+++ b/templates/features.html
@@ -1,42 +1,39 @@
 {% include "_header.html" %}
   <div id="main__body" class="main__body container-fluid home">
     <div class="row">
-      <div class="col-lg-13">
+      <div class="col-lg-8">
 
         <h1>Features</h1>
 
-        <ul>
-          <li><a href="#">Introduction</a></li>
-          <li><a href="#">API integration</a></li>
-          <li><a href="#">Performance</a></li>
-          <li><a href="#">Security</a></li>
-          <li><a href="#">Support</a></li>
-        </ul>
-
-        <h2>Introduction</h2>
-        <p>
-          The land and property data platform makes it easier for service delivery teams in Wales to 
-          work with data about land and property. If you are designing and building public services you can use the 
-          platform to quickly access data, such as checking if an address is in Wales or not.
-        </p>
-        <p>It can also be used by analysts developing policies or researching outcomes.
+        <p class="lead">
+          The land and property data platform makes it simpler and faster for service delivery teams at the Welsh Revenue Authority and across Wales to use land and property data.
         </p>
 
-        <h2>API integration</h2>
-        <p>the platform has a simple, well documented API you can integrate with your application 
-          or back-office system.
+        <dl class="product-features">
+          <dt>Is a property Wales or not?</dt>
+          <dd>
+            Verify if a property is in Wales or not, or even if it crosses the border with England
+          </dd>
+          <dt>Postcode and address lookup</dt>
+          <dd>Quickly implement a postcode and address lookup for your service</dd>
+          <dt>Tax zones</dt>
+          <dd>Check which Land Transaction Tax rules apply in different parts of Wales</dd>
+          <dt>Extended property information</dt>
+          <dd>Check if a property has registered for the tourism levy or contains a listed building</dd>
+          <dt>Link to other datasets</dt>
+          <dd>Reduced the effort of linking to other Welsh and UK government datasets</dd>
+        </dl>
+        <h2>API access and downloads</h2>
+        <p>
+          The platform has a simple, well documented API you can integrate with your application or back-office system. Code libraries are available in popular languages to help you get started.
         </p>
         <p>
-          <a href="/api-docs">Get started with the API.</a>
+          Some datasets, such as tax zones, are available as downloads in standard formats, such as GeoJSON and Frictionless Data.
         </p>
-        <h2>Performance</h2>
+        <h2>Secure access for the public sector</h2>
         <p>
-          Vist our <a href="#">performance data</a> page to see how the platform is performing.
+          Data that is sensitive or has licensing restrictions can only be accessed by organiations that should be accessing it. All data is marked as open, closed or shared so it's always clear how it can be used.
         </p>
-        <h2>Security</h2>
-        <p>The land and property platform protects and manages data to meet the needs of government services and Data Protection Act 2018.</p>
-        <h2>Support</h2>
-        <p>Join our <a href="#">Slack channel</a></p>
       </div>
     </div>
   </div>
