--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <div class="row">
           <div class="col-lg-8">
             <h1>Find property and land information for Wales that is easy to understand, use and trust</h1>
-            <p class="lead">A platform to help teams design public services and analysts to inform policy decisions</p>
+            <p class="lead">A platform to help teams at the Welsh Revenue Authority and across Wales design better public services and inform policy decisions</p>
           </div>
           <div class="col-lg-4">
             <img src="/static/images/proposition-image.png" srcset="/static/images/proposition-image.svg" alt="A graphic represent the data platform, showing a map and different types of data file such as CSV and JSON" class="app-hero__image">
