--- a/static/css/app.css
+++ b/static/css/app.css
@@ -46,11 +46,15 @@ img {
 
 .product-features dt, .product-features dd {
   font-size:18px;
-  padding-left:70px;
+  padding-left:60px;
 }
 
 .product-features dd {
   margin-bottom:10px;
   background-image:url(../images/tick.svg);
   background-repeat: no-repeat;
+  background-size: 40px 40px;
+  background-position: top left;
+  padding-top:5px;
+  padding-bottom:10px;
 }
