--- a/templates/getting-started.html
+++ b/templates/getting-started.html
@@ -6,18 +6,15 @@
         <h1>Getting started</h1>
         <p>
           The land and property data platform is for service delivery teams and 
-          data analysts working in the Welsh public sector. Some information is also available
-          as open data and can be used by anyone.
+          data analysts at the Welsh Revenue Authority and wider public sector in Wales. Some information, such as tax zones, is available as open data and can be used by anyone.
         </p>
+        <h2>Try the API now</h2>
         <p>
-          You don't need to create an account to get started with our API. 
+          You don't need to create an account to get started with our API. However, you will be asked to create an account to access some datasets where licensing restrictions apply.
+          For some closed datasets, there will be additional verification steps for your account.
+          Without an account, the API will return synthetic sample data, so you can still try it out.
         </p>
         <p><a href="/api-docs">Start exploring the API now</a></p>
-        <p>
-          You will be asked to create an account to access some datasets where licensing restrictions apply.
-          For some closed datasets, there will be additional verification steps for your account.
-          Without an account, the API will return fake sample data.
-        </p>
         <h2>Pricing</h2>
         <p>
           The land and property platform is <strong>free</strong> to use unless you:
