--- a/templates/_header.html
+++ b/templates/_header.html
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5">
+                <!-- <div class="col-md-5">
                     <div class="gel-beta__actions-wrapper">
                         <div class="gel-beta__actions">
 
@@ -52,7 +52,7 @@
                 </div>
                 <div class="gel-beta__minimise hidden-lg">
                     <button class="gel-beta__minimise-button  js-gel-beta-minimise"><span class="visually-hidden">Minimise</span></button>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
