--- a/templates/getting-started.html
+++ b/templates/getting-started.html
@@ -23,6 +23,10 @@
           <li>need access to certain datasets</li>
           <li>make a very high number of requests</li>
         </ul>
+        <h2>Support</h2>
+        <p>
+          If you have any questions, you can <a href="dataproject@wra.gov.wales">email us</a>, or join our public <a href="dataproject@wra.gov.wales">Slack channel</a>.
+        </p>
         <h2>Who's using the platform?</h2>
         <ul>
           <li>The Welsh Revenue Authority</li>
