--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
           <br>
         </div>
         <div class="col-lg-6">
-        <p><img src="http://www.digital-land.info/static/images/datasets.png" srcset="/static/images/datasets.svg" alt="An illustration depicting a dataset page with a title of 'What is this data about'" class="app-max-width--100"></p>
+        <p><img  class="product-image" src="http://www.digital-land.info/static/images/datasets.png" srcset="/static/images/datasets.svg" alt="An illustration depicting a dataset page with a title of 'What is this data about'" class="app-max-width--100"></p>
           <br>
           <br>
       </div>
@@ -41,7 +41,7 @@
           </p>
         </div>
         <div class="col-lg-6">
-          <img srcset="/static/images/api.svg" alt="An illustration depicting an API, showing a terminal command prompt" class="app-max-width--100">
+          <img  class="product-image" srcset="/static/images/api.svg" alt="An illustration depicting an API, showing a terminal command prompt" class="app-max-width--100">
         </div>
         <div class="col-lg-6">
           <br>
@@ -54,7 +54,7 @@
           </p>
         </div>
         <div class="col-lg-6">
-          <p><img srcset="/static/images/analytics-image2.svg" alt="An illustration depicting an API, showing a terminal command prompt" class="app-max-width--100"></p>
+          <p><img class="product-image" srcset="/static/images/analytics-image2.svg" alt="An illustration depicting an API, showing a terminal command prompt" class="app-max-width--100"></p>
         </div>
       </div>
     </div>
