--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -3,30 +3,28 @@
     <div class="row">
       <div class="col-lg-8">
 
-        <h1>Explore the platform</h1>
+        <h1>Roadmap</h1>
         <p>
-          This is a proof of concept platform and does not contain real data.
-          We are exploring how to make data and rules available via APIs.
+          This is a proof of concept created by the Welsh Revenue Authority. It contains synthetic data and does not cover the whole of Wales. <a href="http://localhost:8000/poc-data">Find out more about what data is included in the proof of concept.</a>
+        </p>
+        <p>
+          This roadmap is a summary of what we are working on implementing as part of the proof of concept.
         </p>
         <h2>Complete</h2>
         <ul>
           <li>Which tax zone a property is in</li>
+          <li>Is a property in Wales or not?</li>
+          <li>Property information</li>
         </ul>
         <h2>In progress</h2>
         <ul>
-          <li>Tax zones</li>
-          <li>Property information</li>
-          <li>Calculating tax</li>                    
-          <li>Which schedule and band is a property in</li>
+          <li>List of tax zones</li>
         </ul>
 
         <h2>Backlog</h2>
         <ul>
-          <li>Is a property in Wales or not?</li>
           <li>Price sold data</li>
           <li>Energy perfomance data</li>
-          <li>Tourism register</li>
-          <li>Second homes</li>
         </ul>
       </div>
     </div>
