--- a/templates/features.html
+++ b/templates/features.html
@@ -17,7 +17,7 @@
           <dt>Postcode and address lookup</dt>
           <dd>Quickly implement a postcode and address lookup for your service</dd>
           <dt>Tax zones</dt>
-          <dd>Check which Land Transaction Tax rules apply in different parts of Wales</dd>
+          <dd>Check which Land Transaction Tax rules apply in different parts of Wales or to specific properties</dd>
           <dt>Extended property information</dt>
           <dd>Check if a property has registered for the tourism levy or contains a listed building</dd>
           <dt>Link to other datasets</dt>
